syntax = "proto3";

package test;
option go_package = "./proto";

service Echo {
  rpc Metadata (RecvReq) returns (RecvResp) {}
}

service ClientStream {
  rpc Recv (stream RecvReq) returns (RecvResp) {}
  rpc RecvMetadata (stream RecvReq) returns (RecvResp) {}
}

service BidirectionalStream {
  rpc Echo (stream RecvReq) returns (stream RecvResp) {}
  rpc EchoSum (stream RecvReq) returns (stream RecvResp) {}
}

message RecvReq {
    string data = 1;
}

message RecvResp {
    int32 count = 1;
    string data = 2;
}
